Make the project working again