@@ -1,35 +1,59 @@
-# Instruction
+# CP Story
 
-1. Using a git command to clone this repository to your computer.
-2. Open Eclipse and then "import existing project" from the cloned folder (In Step 1) into your Eclipse workspace.
-3. Rename your Eclipse Java project: **`2110215_Project_2017_{GroupName}`**. 
-    - Example: If your group name is **`Rockman`**, your project name should be **`2110215_Project_2017_Rockman`**.
-4. Implement your project. 
-    - You should create a commit when you finish each function of your project. 
-    - Don't wait until you finish the whole project to create a commit.
-5. Export your project into a runnable jar file named **`Project_2017_{GroupName}.jar`**
-    - Example: If your group name is **`Rockman`**, your jar name should be **`Project_2017_Rockman.jar`**.
-    - Your jar file must include all your resources (images or audios) and it must be runnable from anywhere.
-6. Create a PDF document of your project and put it at the root directory. 
-    - Your document should contain:
-        - Brief introduction about your project.
-        - User Manual (How to use your program or How to play if your project is a game).
-        - Implementation Detail (UML class diagram and description of all classes and methods you implemented)
-    - The document of each lab or exercise is a great example of how your document should look like.
-7. Ensure that you push all commits of your project within **14 December 2017**.
-    - To sum up, this repository should contain:
-        - All your codes.
-        - Runnable jar file.
-        - PDF Document.
-        - An image of the UML class diagram.
-8. **On your presentation day (15 December 2017)**, bring a printed version of your document and your own laptop for showing a demo of your project.
-    - **You only have 5 minutes for showing a demo of your project. So make sure that your laptop is ready for presentation beforehand.**
-    
-# Support
+CP Story is a final project of the Programming Methodology class 2017 at Chulalongkorn University, learning about object-oriented programming. It is a game inspired by MapleStory but was modified to have characters, monsters, scenes, and skills related to Computer Engineering and Chulalongkorn University.
 
-* If you need any kind of help or advice about your project
-    1. You can meet and ask TAs directly at Lab Game 18th floor Engineering 4 Building (Charoenvidsavakham) every Friday between 1pm and 4pm.
-        - Please make an appointment if you want to meet at some other time.
-    2. You can ask in channel #project of our Slack.
-        - If you have never joined our Slack before, go to https://goo.gl/FmKbMY.
-        - Otherwise, go to https://progmeth2017.slack.com and sign in with your account.
+## How to run the code on Eclipse
+
+Since this project was initially developed without a package manager, external libraries must be imported manually.
+
+1. Download [JavaFX SDK 17](https://gluonhq.com/products/javafx/) and extract the downloaded ZIP file.
+2. Open Eclipse settings, go to `Java` > `Build Path` > `User Libraries` and create new `JavaFX 17` library
+3. Add all 8 External JARs from the downloaded JavaFX SDK to the `JavaFX 17` user library.
+4. Open the project on Eclipse, right click on the root directory, go to `Build Path` > `Add Libraries`, select `User Library` and select `JavaFX 17`
+5. Open `src/main/Main.java` and click Run. This should not be working yet.
+6. Click dropdown next to the Run button and open Run Configurations, select Arguments tab, type the following to VM arguments text field, and uncheck `Use the -XstartOnFirstThread...` option.
+
+```
+--module-path <JAVAFX_SDK_DIR>/lib --add-modules=javafx.controls,javafx.media
+```
+
+7. Click Run again, the game should now be working.
+
+## How to run the JAR file
+
+The JAR file is provided in the [Releases](https://github.com/sunboyy/cp-story/releases) page on GitHub. Download the latest version before continuing.
+
+Because JavaFX library is not embedded in the JAR file, you still need to download the JavaFX SDK library like in the previous section. After having the JavaFX library downloaded and unzipped, execute this command in the terminal window to start the game.
+
+```
+java --module-path <JAVAFX_SDK_DIR>/lib \
+    --add-modules=javafx.controls,javafx.media \
+    -jar cpstory.jar
+```
+
+## Contributors
+
+Thanks all these people to make this project happen!
+
+<table>
+  <tbody>
+    <tr>
+      <td align="center" width="50%">
+        <a href="https://github.com/sunboyy">
+          <img src="https://avatars.githubusercontent.com/u/22892266?v=4?s=100" width="100px;" alt="sunboyy"/><br />
+          <sub><b>sunboyy</b></sub>
+        </a>
+      </td>
+      <td align="center" width="50%">
+        <a href="https://github.com/npmoewii">
+          <img src="https://avatars.githubusercontent.com/u/22891156?v=4?s=100" width="100px;" alt="npmoewii"/><br />
+          <sub><b>npmoewii</b></sub>
+        </a>
+      </td>
+    </tr>
+  </tbody>
+</table>
+
+## Original code
+
+You can find the original code of this project when it was submitted in branch [final](https://github.com/sunboyy/cp-story/tree/final).
